--- a/resources/css/components/_cropper.scss
+++ b/resources/css/components/_cropper.scss
@@ -35,26 +35,8 @@
 }
 
 .cropper-options {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.option-group {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-
-    label {
-        font-weight: 500;
-        font-size: 0.875rem;
-        color: #666;
-    }
-
-    .form-control {
-        min-height: 36px;
-        font-size: 0.875rem;
-    }
+    // Grid layout with .row and .col-6 classes
+    // Handled by bootstrap-like grid system in _grid.scss
 }
 
 // Adjust modal size for cropper
