--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -19,6 +19,7 @@
 @use './components/toast';
 @use './components/media-field';
 @use './components/fieldset';
+@use './components/fieldset-cards';
 @use './components/cropper';
 @use './components/track-a';
 @use './components/forms/labels';
