--- a/resources/css/components/_fieldset-cards.scss
+++ b/resources/css/components/_fieldset-cards.scss
@@ -110,7 +110,10 @@
 // ACTION BUTTONS - Same as media-action
 // ============================================
 
-.fieldset-card-header .btn-fieldset-edit,
+// ============================================
+// ACTION BUTTONS - Delete button
+// ============================================
+
 .fieldset-card-header .btn-fieldset-delete {
     position: absolute;
     width: 2rem;
@@ -124,6 +127,8 @@
     justify-content: center;
     transition: all 0.2s;
     z-index: 10;
+    top: 5px;
+    right: 5px;
 
     svg {
         width: 1.25rem;
@@ -132,19 +137,15 @@
     }
 
     &:hover {
-        background-color: #edf2f7;
+        background-color: #fed7d7;
         transform: scale(1.1);
     }
-}
-
-.fieldset-card-header .btn-fieldset-edit {
-    top: 5px;
-    left: 5px;
 
     &:hover svg {
-        color: #0891b2;
+        color: #c53030;
     }
 }
+
 
 .fieldset-card-header .btn-fieldset-delete {
     top: 5px;
