--- a/resources/css/components/_fieldset-cards.scss
+++ b/resources/css/components/_fieldset-cards.scss
@@ -96,10 +96,10 @@
     left: 0;
     right: 0;
     font-size: 0.75rem;
-    color: #4a5568;
+    color: #fff;
     text-align: center;
     padding: 4px;
-    background: rgba(255, 255, 255, 0.95);
+    background: #3c3c3c7d;
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
