--- a/resources/css/components/_buttons.scss
+++ b/resources/css/components/_buttons.scss
@@ -6,6 +6,7 @@
     display: inline-block;
     padding: 12px 20px;
     margin-bottom: 0;
+    min-width: 90px;
     font-family: 'Open Sans', sans-serif;
     font-size: 13px;
     font-weight: normal;
