Add Bootstrap-style toggle variant with two-button design
- Create toggle/bootstrap.blade.php with two-button layout (On/Off buttons)
- Implement pure JavaScript toggle without external Bootstrap Toggle plugin dependency
- Add _toggle-bootstrap.scss with complete styling matching Voyager appearance
- Support on() and off() methods for custom button labels in any language
- Add data-toggle-id attribute for associating buttons with checkbox input
- Initialize toggle state on page load and handle button/checkbox interactions
- Import _toggle-bootstrap.scss in main app.scss
- Update Toggle class documentation with bootstrap variant examples
- All 127 tests passing

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -27,6 +27,7 @@
 @use './components/forms/groups';
 @use './components/forms/checkboxes';
 @use './components/forms/switches';
+@use './components/forms/toggle-bootstrap';
 @use './components/forms/chips';
 @use './components/forms/options';
 @use './components/forms/selects';
