Fix: Update SCSS syntax for Dart Sass 3.0+ compatibility
- Add '@use sass:color' import for color module
- Replace deprecated darken() function with color.adjust()
- Use color.adjust(color, $lightness: -5%) instead of darken(color, 5%)
- Resolve Dart Sass deprecation warnings
- Assets build successfully with npm run build

--- a/resources/css/components/forms/_toggle-bootstrap.scss
+++ b/resources/css/components/forms/_toggle-bootstrap.scss
@@ -4,6 +4,8 @@
 // Based on Voyager's bootstrap toggle style
 // Two-button toggle with "On" and "Off" states
 
+@use 'sass:color';
+
 .toggle-bootstrap-wrapper {
     display: block;
     margin-top: 8px;
@@ -55,7 +57,7 @@
             font-weight: 600;
 
             &:hover {
-                background-color: darken(#0cb7e0, 5%);
+                background-color: color.adjust(#0cb7e0, $lightness: -5%);
             }
         }
     }
