Add ColorPicker field implementation
- Create ColorPicker PHP class with palette() method
- Normalize HEX color values (lowercase, ensure # prefix)
- Create color-picker.blade.php view with HTML5 color input
- Add color preview display and value indicator
- Create _color-picker.scss with custom styling
- Import color-picker in main app.scss
- Add 3 unit tests: configuration, palette, value normalization

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -31,6 +31,7 @@
 @use './components/forms/chips';
 @use './components/forms/options';
 @use './components/forms/selects';
+@use './components/forms/color-picker';
 @use './components/forms/rich-editor';
 @use './components/forms/code-editor';
 @use './components/forms/content-editor';
