Fix password toggle functionality and remove oneRow() alias
- Fix password toggle by using stopImmediatePropagation() to prevent double-click issue
- Use capture phase for event listener to execute before other handlers
- Remove oneRow() alias from CheckboxGroup and RadioGroup (inline() already exists)
- Password field now correctly toggles between password and text type
- Icons toggle properly without relay effects

All tests passing: 155 package tests + 5 app tests

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -32,6 +32,7 @@
 @use './components/forms/options';
 @use './components/forms/selects';
 @use './components/forms/color-picker';
+@use './components/forms/file-upload';
 @use './components/forms/rich-editor';
 @use './components/forms/code-editor';
 @use './components/forms/content-editor';
