--- a/resources/css/components/forms/_inputs.scss
+++ b/resources/css/components/forms/_inputs.scss
@@ -99,7 +99,7 @@ select.form-control[multiple] {
     position: relative;
     display: block;
 
-    input {
+    input[data-password-input] {
         padding-right: 40px;
     }
 
@@ -117,6 +117,7 @@ select.form-control[multiple] {
         display: flex;
         align-items: center;
         justify-content: center;
+        z-index: 10;
 
         &:hover {
             color: var(--ave-color-primary);
@@ -124,6 +125,39 @@ select.form-control[multiple] {
 
         svg {
             display: block;
+            transition: opacity 0.2s ease;
+
+            // Show by default
+            opacity: 1;
+            visibility: visible;
+        }
+
+        // Hide when has .hidden class
+        svg.hidden {
+            display: none !important;
+            opacity: 0 !important;
+            visibility: hidden !important;
+        }
+
+        // Specific rules for each icon
+        .icon-eye {
+            display: block;
+        }
+
+        .icon-eye.hidden {
+            display: none !important;
+        }
+
+        .icon-eye-off {
+            display: none; // Hidden by default
+        }
+
+        .icon-eye-off.hidden {
+            display: none !important;
+        }
+
+        .icon-eye-off:not(.hidden) {
+            display: block !important;
         }
     }
 }
