--- a/resources/css/components/_fieldset-cards.scss
+++ b/resources/css/components/_fieldset-cards.scss
@@ -9,7 +9,7 @@
 .fieldset-cards-view {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: .5rem;
 }
 
 // ============================================
