--- a/resources/css/components/_fieldset.scss
+++ b/resources/css/components/_fieldset.scss
@@ -45,7 +45,7 @@
     justify-content: space-between;
     gap: .5rem;
     padding: .5rem 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0;
     background-color: #f6f6f6;
     border: 1px solid #ebebeb;
     border-radius: 0.5rem;
@@ -56,13 +56,10 @@
     align-items: center;
     justify-content: center;
     gap: .5rem;
-    padding: .5rem 1rem;
-    margin-top: 1rem;
-    background-color: #f6f6f6;
-    border: 1px solid #ebebeb;
+    padding: .5rem;
+    margin-top: 0;
     border-radius: 0.5rem;
 }
-
 
 .fieldset-actions label {
     font-size: 16px;
@@ -151,6 +148,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin: .5rem 0;
 }
 
 // ============================================
