feat: improve routing and ACL UI

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -36,6 +36,7 @@
 @use './components/forms/rich-editor';
 @use './components/forms/code-editor';
 @use './components/forms/content-editor';
+@use './components/forms/matrix';
 
 // Auth pages
 @use './auth/login';
