--- a/resources/css/components/_buttons.scss
+++ b/resources/css/components/_buttons.scss
@@ -42,6 +42,12 @@
 }
 
 // Button sizes
+.btn-35 {
+    height: 35px;
+    padding: 8px 18px;
+    font-size: 11px;
+}
+
 .btn-sm {
     padding: 8px 16px;
     font-size: 10px;
