--- a/resources/css/content/_resource-pages.scss
+++ b/resources/css/content/_resource-pages.scss
@@ -40,7 +40,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: flex-end;
     gap: 20px;
     margin-bottom: 15px;
 }
