fix: remove sass darken usage in table link

--- a/resources/css/content/_tables.scss
+++ b/resources/css/content/_tables.scss
@@ -79,13 +79,14 @@
 }
 
 .table-link {
-    color: var(--ave-color-primary);
+    color: var(--ave-color-primary, #2563eb);
     text-decoration: underline;
     cursor: pointer;
     font-weight: 500;
 
     &:hover {
-        color: darken(var(--ave-color-primary), 5%);
+        color: var(--ave-color-primary, #2563eb);
+        filter: brightness(0.9);
         text-decoration-thickness: 2px;
     }
 }
