chore: sync outstanding ave.package changes

--- a/resources/css/_variables.scss
+++ b/resources/css/_variables.scss
@@ -17,6 +17,7 @@
     // Primary colors (used throughout the application)
     --ave-color-primary: #22a7f0;
     --ave-color-primary-dark: #1c92d2;
+    --ave-color-primary-darker: #166b9a;
 
     // Surface colors
     --ave-color-surface: #ffffff;
